--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,7 @@
         "outDir": "./lib"
     },
     "include": [
-        "src/index.ts",
+        "src/Persistency.ts",
         "src/**/*.test.ts"
     ]
 }
