fix: Move testing library to dev dependency

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "persistency",
-  "version": "2.0.2",
+  "version": "2.0.3",
   "description": "The lightweight resilient persistency library",
   "main": "lib/",
   "types": "lib/types",
@@ -32,9 +32,7 @@
   "homepage": "https://github.com/Llorx/persistency#readme",
   "devDependencies": {
     "@types/node": "^22.7.8",
-    "typescript": "^5.6.3"
-  },
-  "dependencies": {
+    "typescript": "^5.6.3",
     "arrange-act-assert": "^0.0.5"
   }
 }
